    character sets that are not the default AL16UTF16.
 8) Moved the resetting of the setinputsizes flag before the binding takes
    place so that if an error takes place and a new statement is prepared
    subsequently, spurious errors will not occur.
 9) Fixed compilation with Oracle 10g Release 1.
10) Tweaked documentation based on feedback from a number of people.

Changes from 5.0.1 to 5.0.2
 1) Fix creation of temporary NCLOB values and the writing of NCLOB values in
    non Unicode mode.
 2) Re-enabled parsing of non select statements as requested by Roy Terrill.
 3) Implemented a parse error offset as requested by Catherine Devlin.
 4) Removed lib subdirectory when forcing RPATH now that the library directory
    is being calculated exactly in setup.py.
 5) Added an additional cast in order to support compiling by Microsoft
    Visual C++ 2008 as requested by Marco de Paoli.
 6) Added additional include directory to setup.py in order to support
    compiling by Microsoft Visual Studio was requested by Jason Coombs.
 7) Fixed a few documentation issues.

Changes from 5.0 to 5.0.1
 1) Added support for database change notification available in Oracle 10g
    Release 2 and higher.
 2) Fix bug where NCLOB data would be corrupted upon retrieval (non Unicode
    mode) or would generate exception ORA-24806 (LOB form mismatch). Oracle
    insists upon differentiating between CLOB and NCLOB no matter which
    character set is being used for retrieval.
 3) Add new attributes size, bufferSize and numElements to variable objects,
    deprecating allocelems (replaced by numElements) and maxlength (replaced
    by bufferSize)
 4) Avoid increasing memory allocation for strings when using variable width
    character sets and increasing the number of elements in a variable during
    executemany().
 5) Tweaked code in order to ensure that cx_Oracle can compile with Python
    3.0.1.

Changes from 4.4.1 to 5.0