@@ -88,6 +88,16 @@ Connection Object
       This method is an extension to the DB API definition.
 
 
+.. attribute:: Connection.clientidentifier
+
+   This write-only attribute sets the client_identifier column in the
+   v$session table.
+
+   .. note::
+
+      This attribute is an extension to the DB API definition.
+
+
 .. attribute:: Connection.clientinfo
 
    This write-only attribute sets the client_info column in the v$session table
